apps/base/dawarich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich
  namespace: dawarich
  labels:
    service: dawarich
spec:
  selector:
    app: dawarich
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
